%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: v_hand
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: shoot
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: shoot_type
    m_Type: 3
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: reloading
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: New Layer
    m_StateMachine: {fileID: 110715035}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: shoot_type
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110106378
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110299234}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 4
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110107341
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: reloading
    m_EventTreshold: 1
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 1
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110108541
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110260707}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 3
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110110417
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110246476}
  m_TransitionDuration: .00760157267
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 1
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &110112969
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110220842}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: reloading
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110122433
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110290904}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 3
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110133963
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110281325}
  m_TransitionDuration: .0110965231
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 2
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110166770
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110250047}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 4
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110173276
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110269062}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 2
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110175230
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110281325}
  m_DstState: {fileID: 110259201}
  m_TransitionDuration: .374999821
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .625000179
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110188273
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110241738}
  m_TransitionDuration: .00801386684
  m_TransitionOffset: .0185714122
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: shoot
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 6
    m_ConditionEvent: shoot_type
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle_gun
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: -180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110220842
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: reload_gun1
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 240, y: 216, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110241738
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: shoot_gun1
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: 96, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110246476
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: shoot_gun2
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: 168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110250047
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle_useitem
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400014, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 408, y: -180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110259201
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: punch_right
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400010, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -432, y: 384, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110260707
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: swing_tool
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400016, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: 384, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110269062
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle_melee
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400008, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 0, y: -180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110281325
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: punch_left
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -432, y: 288, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110290904
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: idle_tool
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400014, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 204, y: -180, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110299234
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: UseItem
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400022, guid: 9b9a742b3c176b84eb1fb1720b4f9495, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -204, y: 456, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110241738}
  - {fileID: 110246476}
  - {fileID: 110220842}
  - {fileID: 110281325}
  - {fileID: 110259201}
  - {fileID: 110260707}
  - {fileID: 110290904}
  - {fileID: 110269062}
  - {fileID: 110299234}
  - {fileID: 110250047}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110100000}
      - {fileID: 110188273}
      - {fileID: 110110417}
      - {fileID: 110112969}
      - {fileID: 110133963}
      - {fileID: 110108541}
      - {fileID: 110107341}
      - {fileID: 110173276}
      - {fileID: 110122433}
      - {fileID: 110106378}
      - {fileID: 110166770}
    data:
      first: {fileID: 110246476}
      second: []
    data:
      first: {fileID: 110200000}
      second: []
    data:
      first: {fileID: 110241738}
      second: []
    data:
      first: {fileID: 110220842}
      second: []
    data:
      first: {fileID: 110281325}
      second:
      - {fileID: 110175230}
    data:
      first: {fileID: 110259201}
      second: []
    data:
      first: {fileID: 110260707}
      second: []
    data:
      first: {fileID: 110290904}
      second: []
    data:
      first: {fileID: 110269062}
      second: []
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 48, y: 24, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1107 &110715035
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New Layer
  m_DefaultState: {fileID: 0}
  m_States: []
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions: {}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
